err/gl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/getlocalization'...
Listing './lib/python3.5/site-packages/getlocalization/api'...
Listing './lib/python3.5/site-packages/getlocalization/api/client'...
Compiling './lib/python3.5/site-packages/getlocalization/api/client/Query.py'...
***   File "./lib/python3.5/site-packages/getlocalization/api/client/Query.py", line 97
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getlocalization/api/data'...
Listing './lib/python3.5/site-packages/getlocalization/api/files'...
Listing './lib/python3.5/site-packages/getlocalization/cli'...
Compiling './lib/python3.5/site-packages/getlocalization/cli/commands.py'...
***   File "./lib/python3.5/site-packages/getlocalization/cli/commands.py", line 27
    print "Repository created..."
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/getlocalization/cli/opster.py'...
***   File "./lib/python3.5/site-packages/getlocalization/cli/opster.py", line 823
    print ' '.join(filter(lambda x: x.startswith(current), commands))
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/getlocalization/cli/repository.py'...
***   File "./lib/python3.5/site-packages/getlocalization/cli/repository.py", line 19
    print "No repository found"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gl-0.2.36.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
